# SecretScout

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_STATUS.md  MIGRATION.md  README.md  action.yml  cli.js  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CLI_QUICK_REFERENCE.md  CLI_TRANSFORMATION.md  CLI_USAGE.md  COMPLETION_PHASE_SUMMARY.md  DOCUMENTATION_INDEX.md  GITHUB_ACTIONS.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLES.md  INTEGRATION_FLOWS.md  INTEGRATION_README.md  INTEGRATION_SPEC.md  ORIGINAL_ACTION_TECHNICAL_SPEC.md  PSEUDOCODE.md  PSEUDOCODE_PHASE_COMPLETE.md  PUBLISHING.md  PUBLISHING_INTEGRATION_PLAN.md  README.md  REFINEMENT_COMPLETE.md  REFINEMENT_PHASE_COMPLETE.md  SPARC_SPECIFICATION.md
docs/architecture/: BUILD_DEPLOYMENT.md  ERROR_HANDLING.md  MODULE_STRUCTURE.md  WASM_BOUNDARY.md  WASM_BOUNDARY_DIAGRAMS.md  WASM_BOUNDARY_QUICK_REFERENCE.md
docs/pseudocode/: binary_management.pseudo.md  configuration.pseudo.md  event_routing.pseudo.md  github_api.pseudo.md  job_summary.pseudo.md  pr_comments.pseudo.md  sarif_processing.pseudo.md
npm/: README.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: index.js  package.json
npm/linux-x64/: package.json
npm/win32-x64/: index.js  package.json
scripts/: postinstall.js
secretscout/: Cargo.toml
secretscout/src/: error.rs  lib.rs  main.rs  wasm.rs
secretscout/src/binary/: mod.rs
secretscout/src/cli/: mod.rs
secretscout/src/commands/: detect.rs  mod.rs  protect.rs
secretscout/src/config/: mod.rs
secretscout/src/events/: mod.rs
secretscout/src/github/: mod.rs
secretscout/src/github_actions/: mod.rs
secretscout/src/outputs/: comments.rs  mod.rs  summary.rs
secretscout/src/sarif/: mod.rs  types.rs
secretscout/tests/: integration_test.rs
