[package]
name = "secretscout"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Blazingly fast Rust CLI for detecting secrets, passwords, API keys, and tokens in git repositories"
readme = "../README.md"
keywords = ["security", "secrets", "git", "cli", "scanner"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "tests/fixtures/*",
    ".github/*",
    "*.log",
    "target/*"
]

[[bin]]
name = "secretscout"
path = "src/main.rs"
required-features = ["native"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "tokio",
    "reqwest/native-tls",
    "octocrab",
    "flate2",
    "tar",
    "zip",
    "dirs",
]
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "web-sys",
    "console_error_panic_hook",
    "serde-wasm-bindgen",
]

[dependencies]
# Core dependencies (always included)
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true

# Native-only dependencies
tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
octocrab = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }

# CLI (native only)
clap = { workspace = true, features = ["derive", "env"] }
env_logger = { workspace = true, optional = true }

# WASM-only dependencies
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
# Unix-specific for file permissions

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only (not WASM)
env_logger.workspace = true

[dev-dependencies]
tempfile = "3.8"
